[gd_scene load_steps=14 format=2]

[ext_resource path="res://main_menu/main_menu.png" type="Texture" id=1]
[ext_resource path="res://others/buttons/hover.png" type="Texture" id=2]
[ext_resource path="res://others/buttons/pressed.png" type="Texture" id=3]
[ext_resource path="res://others/buttons/normal.png" type="Texture" id=4]
[ext_resource path="res://others/mouse/Mouse.tscn" type="PackedScene" id=5]
[ext_resource path="res://main_menu/MainMenu.gd" type="Script" id=6]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform vec2 direction = vec2(1.0, 0.0);
uniform float speed = 0.02f;

void fragment() {
	COLOR = texture(TEXTURE, UV + (direction * TIME * speed));
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/direction = Vector2( 1, 0 )
shader_param/speed = 0.1

[sub_resource type="DynamicFontData" id=13]
antialiased = false
font_path = "res://others/fonts/8-BIT WONDER.TTF"

[sub_resource type="DynamicFont" id=14]
size = 29
font_data = SubResource( 13 )

[sub_resource type="StyleBoxTexture" id=10]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 44, 11 )

[sub_resource type="StyleBoxTexture" id=11]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 44, 11 )

[sub_resource type="StyleBoxTexture" id=12]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 44, 12 )

[node name="MainMenu" type="Node2D"]
script = ExtResource( 6 )

[node name="Background" type="ParallaxBackground" parent="."]

[node name="MainMenuScroll" type="ParallaxLayer" parent="Background"]
motion_scale = Vector2( 0.3, 0.6 )
motion_mirroring = Vector2( 1216.32, 0 )

[node name="MainMenu" type="Sprite" parent="Background/MainMenuScroll"]
modulate = Color( 1, 1, 1, 0.588235 )
material = SubResource( 2 )
position = Vector2( 608, 300 )
scale = Vector2( 0.42, 0.42 )
texture = ExtResource( 1 )

[node name="BlackRect" type="ColorRect" parent="Background"]
margin_right = 1038.0
margin_bottom = 618.0
color = Color( 0, 0, 0, 0.360784 )

[node name="BtnStartGame" type="Button" parent="."]
margin_left = 116.0
margin_top = 153.0
margin_right = 467.0
margin_bottom = 216.0
focus_neighbour_top = NodePath("../BtnExit")
focus_neighbour_bottom = NodePath("../BtnSettings")
custom_fonts/font = SubResource( 14 )
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 11 )
custom_styles/normal = SubResource( 12 )
text = "Start GAME"

[node name="BtnSettings" type="Button" parent="."]
margin_left = 571.0
margin_top = 240.0
margin_right = 922.0
margin_bottom = 303.0
focus_neighbour_top = NodePath("../BtnStartGame")
focus_neighbour_bottom = NodePath("../BtnCredits")
custom_fonts/font = SubResource( 14 )
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 11 )
custom_styles/normal = SubResource( 12 )
text = "Settings"

[node name="BtnCredits" type="Button" parent="."]
margin_left = 116.0
margin_top = 328.0
margin_right = 467.0
margin_bottom = 391.0
focus_neighbour_top = NodePath("../BtnSettings")
focus_neighbour_bottom = NodePath("../BtnExit")
custom_fonts/font = SubResource( 14 )
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 11 )
custom_styles/normal = SubResource( 12 )
text = "Credits"

[node name="BtnExit" type="Button" parent="."]
margin_left = 571.0
margin_top = 414.0
margin_right = 922.0
margin_bottom = 477.0
focus_neighbour_top = NodePath("../BtnCredits")
focus_neighbour_bottom = NodePath("../BtnStartGame")
custom_fonts/font = SubResource( 14 )
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 11 )
custom_styles/normal = SubResource( 12 )
text = "Exit"

[node name="Mouse" parent="." instance=ExtResource( 5 )]
scale = Vector2( 3, 3 )

[connection signal="pressed" from="BtnStartGame" to="." method="_on_BtnStartGame_pressed"]
[connection signal="pressed" from="BtnExit" to="." method="_on_BtnExit_pressed"]
